--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,31 +7,8 @@ on:
       - master
 
 jobs:
-  go-test:
-    name: "Go Test"
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go-version: [1.16.x, 1.17.x, 1.18.x, 1.19.x]
-    steps:
-      - name: Install Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
-      - uses: actions/cache@v3
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-      - name: Fetch dependencies
-        run: make deps
-      - name: Test
-        run: make test
-
-  coverage:
+  unit-tests:
+    name: "Unit tests"
     runs-on: ubuntu-latest
     steps:
       - name: Install Go
@@ -46,10 +23,8 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      - name: Fetch dependencies
-        run: make deps
       - name: Run tests
-        run: make cov
+        run: make test/cov
       - name: Upload coverage
         uses: codecov/codecov-action@v3
         with:
