fix path to coverage for test github action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,5 +29,5 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           flags: unittests
-          files: .cover.out
+          files: .coverage/coverage.out
           token: ${{ secrets.CODECOV_TOKEN }}
